# futils

./: .gitignore  .lorem  CMakeLists.txt  Makefile  README  README.md  date2timestamp.py  learn-rust.md  np.c  recalendar.py  setup.py  test.sh
align/: Cargo.toml
align/src/: main.rs
ascii/: Cargo.toml
ascii/src/: main.rs
base64url/: Cargo.toml
base64url/src/: main.rs
beep/: Cargo.toml
beep/src/: main.rs
bgrep/: Cargo.toml  README.md
bgrep/src/: main.rs
bin-to-num/: Cargo.toml  README.md  reference.c
bin-to-num/src/: main.rs
count/: TODO
count/src/: main.rs
cumsum/: Cargo.toml  TODO
cumsum/src/: main.rs
dbg/: Cargo.toml
dbg/src/: main.rs
ddiff/: Cargo.toml
ddiff/src/: main.rs
distinct/: Cargo.toml  TODO
distinct/src/: main.rs
ends/: Cargo.toml
ends/src/: main.rs
gen-strs/: Cargo.toml
gen-strs/src/: main.rs
groupby/: Cargo.toml
groupby/src/: main.rs
hex-to-dec/: Cargo.toml
hex-to-dec/src/: main.rs
hex2num/: Cargo.toml
hex2num/src/: main.rs
hist/: Cargo.toml
hist/src/: main.rs
http/src/: main.rs
jwtdec/: Cargo.toml
jwtdec/src/: main.rs
llen/: Cargo.toml
llen/src/: main.rs
lorem/: Cargo.toml  README
lorem/src/: main.rs
map-range/: Cargo.toml
merge/: Cargo.toml
news/: Cargo.toml
num-to-bin/: Cargo.toml
pace/: Cargo.toml
pick/: Cargo.toml
prefix/: Cargo.toml
rand/: Cargo.toml
rule/: Cargo.toml
sample/: Cargo.toml
scatter/: Cargo.toml
stats/: Cargo.toml
test/: fsum
tld/: Cargo.toml
ued/: Cargo.toml
urldecode/: Cargo.toml
urlencode/: Cargo.toml
xvars/: Cargo.toml
(+17 files in other folders)
